update documentarion question 4

--- a/Questão 4/Questão_4.ipynb
+++ b/Questão 4/Questão_4.ipynb
@@ -247,13 +247,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classe NeuralNetwork\n",
+    "## Classe Rede Neural\n",
     "\n",
     "Representa a rede neural em questão, nesse caso o Perceptron\n",
     "\n",
     "### Atributos\n",
     "\n",
-    "* <strong>layers</strong>: conjunto de layers da rede"
+    "* <strong>camadas</strong>: conjunto de camadas da rede\n",
+    "* <strong>calc_erro</strong>: métrica para calculo de erro\n",
+    "* <strong>learning_rate</strong>: taxa de aprendizagem da rede\n",
+    "* <strong>momentum</strong>: parametro para acelerar convergencia da função"
    ]
   },
   {
